sqlfront.pxd

    
    RETCODE dbcursorcolinfo(DBCURSOR *, DBINT, DBCHAR *, DBINT *, DBINT *, DBINT *)
    RETCODE dbregdrop(DBPROCESS *, DBCHAR *, DBSMALLINT)
#	complex double __builtin_cexp(complex double)
    DBINT dbvarylen(DBPROCESS *, int)
    int dbgetpacket(DBPROCESS *)
    bool __builtin_islessequal()
#	double __builtin_carg(complex double)
    void dbprhead(DBPROCESS *)
    void __builtin_return(void *)
    int dbiordesc(DBPROCESS *)
    RETCODE bcp_collen(DBPROCESS *, DBINT, int)
    DBINT dbcurrow(DBPROCESS *)
    double __builtin_tan(double)
    RETCODE dbsetlversion(LOGINREC *, BYTE)
    ctypedef short unsigned int USHORT
    DBCURSOR * dbcursoropen(DBPROCESS *, BYTE *, SHORT, SHORT, USHORT, DBINT *)
    ctypedef void DBXLATE
    RETCODE dbload_xlate(DBPROCESS *, char *, char *, DBXLATE * *, DBXLATE * *)
    RETCODE dbmnydigit(DBPROCESS *, DBMONEY *, DBCHAR *, DBBOOL *)
    float __builtin_acosf(float)
    RETCODE dbmny4add(DBPROCESS *, DBMONEY4 *, DBMONEY4 *, DBMONEY4 *)
    cdef struct dbtypeinfo:
        DBINT precision
        DBINT scale
    ctypedef dbtypeinfo DBTYPEINFO
    RETCODE bcp_colfmt_ps(DBPROCESS *, int, int, int, DBINT, BYTE *, int, int, DBTYPEINFO *)
    DBINT dbdatepart(DBPROCESS *, int, DBDATETIME *)
    ctypedef int STATUS
    STATUS dbsetrow(DBPROCESS *, DBINT)
    long double __builtin_logl(long double)
    RETCODE dbaltlen(DBPROCESS *, int, int)
    bool __builtin_isgreater()
    RETCODE dbgetrow(DBPROCESS *, DBINT)
    double __builtin_ldexp(double, int)
    DBBOOL DRBUF(DBPROCESS *)
    DBBINARY * dbtxptr(DBPROCESS *, int)
    STATUS dbrowtype(DBPROCESS *)
    int dbspid(DBPROCESS *)
    RETCODE remove_xact(DBPROCESS *, DBINT, int)
    RETCODE dbsqlsend(DBPROCESS *)
    void dbclrbuf(DBPROCESS *, DBINT)
    double __builtin_cos(double)
    RETCODE dbnpdefine(DBPROCESS *, DBCHAR *, DBSMALLINT)
    float __builtin_asinf(float)
    float __builtin_ldexpf(float, int)
    long double __builtin_ldexpl(long double, int)
    void close_commit(DBPROCESS *)
    float __builtin_expf(float)
    bool __builtin_islessgreater()
    void dbsetavail(DBPROCESS *)
    long double __builtin_expl(long double)
    RETCODE bcp_colptr(DBPROCESS *, BYTE *, int)
    RETCODE bcp_init(DBPROCESS *, char *, char *, char *, int)
    ctypedef void DBLOGINFO
    RETCODE dbgetloginfo(DBPROCESS *, DBLOGINFO * *)
    RETCODE dbdatechar(DBPROCESS *, char *, int, int)
#	float __builtin_cargf(complex float)
#	long double __builtin_cargl(complex long double)
    char * dbtabsoruce(DBPROCESS *, int, int *)
    DBPROCESS * open_commit(LOGINREC *, char *)
    void * __builtin_frame_address(unsigned int)
    DBBOOL dbwillconvert(int, int)
    float __builtin_modff(float, float *)
    long double __builtin_modfl(long double, long double *)
    int __builtin_popcountl(long int)
    RETCODE dbcursor(DBCURSOR *, DBINT, DBINT, BYTE *, BYTE *)
    float __builtin_ceilf(float)
    RETCODE commit_xact(DBPROCESS *, DBINT)
    long double __builtin_ceill(long double)
    RETCODE dbmnydec(DBPROCESS *, DBMONEY *)
    RETCODE dbregwatchlist(DBPROCESS *)
    float __builtin_inff()
    void dbsetuserdata(DBPROCESS *, BYTE *)
    void dbfreebuf(DBPROCESS *)
    double __builtin_fabs(double)
    long double __builtin_infl()
    void __builtin_prefetch(void *)
    RETCODE dbwritepage(DBPROCESS *, char *, DBINT, DBINT, BYTE *)
    int dbtabcount(DBPROCESS *)
    RETCODE dbfreesort(DBPROCESS *, DBSORTORDER *)
    RETCODE dbstrcpy(DBPROCESS *, int, int, char *)
    DBPROCESS * tdsdbopen(LOGINREC *, char *, int)
    RETCODE dbnullbind(DBPROCESS *, int, DBINT *)
    RETCODE dbcursorinfo(DBCURSOR *, DBINT *, DBINT *)
#	complex long double __builtin_csinhl(complex long double)
    float __builtin_coshf(float)
#	complex float __builtin_csinhf(complex float)
    long double __builtin_coshl(long double)
    float __builtin_powf(float, float)
    RETCODE dbanullbind(DBPROCESS *, int, int, DBINT *)
    ctypedef int(*INTFUNCPTR)(void *)
    RETCODE dbreghandle(DBPROCESS *, DBCHAR *, DBSMALLINT, INTFUNCPTR)
    RETCODE dbregexec(DBPROCESS *, DBUSMALLINT)
    double __builtin_powi(double, int)
    double __builtin_asin(double)
    RETCODE dbdatezero(DBPROCESS *, DBDATETIME *)
    void dbrpwclr(LOGINREC *)
    STATUS dbreadtext(DBPROCESS *, void *, DBINT)
    int dbnumcompute(DBPROCESS *)
    double __builtin_atan2(double, double)
    RETCODE bcp_readfmt(DBPROCESS *, char *)
    bool __builtin_isgreaterequal()
    void * __builtin_memchr(void *, int, unsigned int)
    RETCODE dbrows(DBPROCESS *)
    DBBOOL dbtabbrowse(DBPROCESS *, int)
    bool __builtin_isnormal()
    RETCODE dbmnyscale(DBPROCESS *, DBMONEY *, int, int)
    float __builtin_atanf(float)
#	complex double __builtin_clog(complex double)
    double __builtin_log(double)
    long double __builtin_atanl(long double)
    long double __builtin_log10l(long double)
    char * dateorder(DBPROCESS *, char *)
    float __builtin_log10f(float)
    RETCODE dbmny4divide(DBPROCESS *, DBMONEY4 *, DBMONEY4 *, DBMONEY4 *)
    double __builtin_atan(double)
    RETCODE dbsetnull(DBPROCESS *, int, int, BYTE *)
    long double __builtin_powl(long double, long double)
    long double __builtin_sinhl(long double)
    float __builtin_powif(float, int)
    float __builtin_sinhf(float)
    long double __builtin_powil(long double, int)
    ctypedef void * DBVOIDPTR
    RETCODE dbsendpassthru(DBPROCESS *, DBVOIDPTR)
    char * dbdayname(DBPROCESS *, char *, int)
#	complex double __builtin_ctan(complex double)
    RETCODE dbcursorbind(DBCURSOR *, int, int, DBINT, DBINT *, BYTE *, DBTYPEINFO *)
    DBINT dbspr1rowlen(DBPROCESS *)
    int dbtsnewlen(DBPROCESS *)
    RETCODE dbfree_xlate(DBPROCESS *, DBXLATE *, DBXLATE *)
    RETCODE dbmnyadd(DBPROCESS *, DBMONEY *, DBMONEY *, DBMONEY *)
    int dbcurcmd(DBPROCESS *)
    int dbxlate(DBPROCESS *, char *, int, char *, int, DBXLATE *, int *, DBBOOL, int)
    long double __builtin_nansl(char *)
    void * __builtin_return_address(unsigned int)
    RETCODE dbmny4mul(DBPROCESS *, DBMONEY4 *, DBMONEY4 *, DBMONEY4 *)
    float __builtin_cosf(float)
    RETCODE dbcanquery(DBPROCESS *)
    RETCODE dbmnyzero(DBPROCESS *, DBMONEY *)
    double __builtin_cosh(double)
    long double __builtin_cosl(long double)
    DBBOOL dbisopt(DBPROCESS *, int, char *)
    RETCODE dbsetllong(LOGINREC *, long int, int)
    RETCODE dbsetversion(DBINT)
    RETCODE dbmnydown(DBPROCESS *, DBMONEY *, int, int *)
    RETCODE dbmnydivide(DBPROCESS *, DBMONEY *, DBMONEY *, DBMONEY *)
#	complex long double __builtin_cpowl(complex long double, complex long double)
    double __builtin_inf()
    int __builtin_ctzl(long int)
    int __builtin_popcountll(long long int)
    RETCODE dbtxtsput(DBPROCESS *, DBBINARY, int)
    double __builtin_log10(double)
    void dbfreequal(char *)
    double __builtin_exp(double)
    RETCODE dbregparam(DBPROCESS *, char *, int, DBINT, BYTE *)
    long double __builtin_acosl(long double)
    RETCODE bcp_batch(DBPROCESS *)
    DBTYPEINFO * dbcoltypeinfo(DBPROCESS *, int)
    int __builtin_ctzll(long long int)
    int dbgetlusername(LOGINREC *, BYTE *, int)
    char * dbtabname(DBPROCESS *, int)
    char * dbprtype(int)
#	complex float __builtin_ctanhf(complex float)
#	complex long double __builtin_ctanhl(complex long double)
    ctypedef int(*DBWAITFUNC)()
    ctypedef void(*DB_DBIDLE_FUNC)(DBWAITFUNC, void *)
    void dbsetidle(DBPROCESS *, DB_DBIDLE_FUNC)
    DBINT start_xact(DBPROCESS *, char *, char *, int)
    long double __builtin_atan2l(long double, long double)
    float __builtin_atan2f(float, float)
    int dbmny4cmp(DBPROCESS *, DBMONEY4 *, DBMONEY4 *)
    double __builtin_floor(double)
    DBBOOL dbcolbrowse(DBPROCESS *, int)
    double __builtin_acos(double)
    void dbsetifile(char *)
#	complex long double __builtin_csqrtl(complex long double)
    RETCODE dbpoll(DBPROCESS *, long int, DBPROCESS * *, int *)
    RETCODE dbmnyminus(DBPROCESS *, DBMONEY *, DBMONEY *)
#	complex float __builtin_csqrtf(complex float)
    RETCODE bcp_done(DBPROCESS *)
#	complex double __builtin_ccos(complex double)
    RETCODE bcp_control(DBPROCESS *, int, DBINT)
    RETCODE dbmny4zero(DBPROCESS *, DBMONEY4 *)
    RETCODE dbsetdeflang(char *)
#	complex double __builtin_csqrt(complex double)
#	complex double __builtin_cpow(complex double, complex double)
#	double __builtin_cabs(complex double)
    RETCODE dbtsput(DBPROCESS *, DBBINARY *, int, int, char *)
    int dbaltcolid(DBPROCESS *, int, int)
    long int __builtin_expect(long int, long int)
#	complex float __builtin_ctanf(complex float)
#	complex double __builtin_ctanh(complex double)
#	complex long double __builtin_ctanl(complex long double)
    char * dbmonthname(DBPROCESS *, char *, int, DBBOOL)
    int dbnumalts(DBPROCESS *, int)
    RETCODE dbbind_ps(DBPROCESS *, int, int, DBINT, BYTE *, DBTYPEINFO *)
    float __builtin_floorf(float)
    DBBINARY * dbtsnewval(DBPROCESS *)
    long double __builtin_floorl(long double)
    char * dbqual(DBPROCESS *, int, char *)
    RETCODE dbdate4zero(DBPROCESS *, DBDATETIME4 *)
    char * dbgetnatlanf(DBPROCESS *)
    RETCODE dbmnyinit(DBPROCESS *, DBMONEY *, int, DBBOOL *)
    double __builtin_frexp(double, int *)
    ctypedef DBWAITFUNC(*DB_DBBUSY_FUNC)(void *)
    void dbsetbusy(DBPROCESS *, DB_DBBUSY_FUNC)
    int dbgettime()
    RETCODE bcp_bind(DBPROCESS *, BYTE *, int, DBINT, BYTE *, int, int, int)
    ctypedef unsigned char DBTINYINT
    RETCODE dbwritetext(DBPROCESS *, char *, DBBINARY *, DBTINYINT, DBBINARY *, DBBOOL, DBINT, BYTE *)
    ctypedef int(*DB_DBCHKINTR_FUNC)(void *)
    ctypedef int(*DB_DBHNDLINTR_FUNC)(void *)
    void dbsetinterrupt(DBPROCESS *, DB_DBCHKINTR_FUNC, DB_DBHNDLINTR_FUNC)
    char * dbcolsource(DBPROCESS *, int)
    RETCODE dbcmdrow(DBPROCESS *)
    RETCODE bcp_sendrow(DBPROCESS *)
    double __builtin_sin(double)
    DBINT dbreadpage(DBPROCESS *, char *, DBINT, BYTE *)
    int dbordercol(DBPROCESS *, int)
    bool __builtin_isless()
    RETCODE dbsetlshort(LOGINREC *, int, int)
    RETCODE abort_xact(DBPROCESS *, DBINT)
    bool __builtin_isnan()
    RETCODE dbrecvpassthru(DBPROCESS *, DBVOIDPTR *)
    RETCODE dbmnymul(DBPROCESS *, DBMONEY *, DBMONEY *, DBMONEY *)
    RETCODE dbmnyinc(DBPROCESS *, DBMONEY *)
